--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "cordova-browser": "^5.0.4",
+    "cordova-plugin-email-composer": "^0.8.3",
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-whitelist": "1",
@@ -21,7 +22,8 @@
       "cordova-plugin-whitelist": {},
       "phonegap-plugin-barcodescanner": {},
       "cordova-plugin-file-transfer": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-email-composer": {}
     },
     "platforms": [
       "browser"
